--- a/nuspec/nuget/Cake.Prca.Issues.EsLint.nuspec
+++ b/nuspec/nuget/Cake.Prca.Issues.EsLint.nuspec
@@ -14,6 +14,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <copyright>Copyright © 2017 BBT Software AG, Root/Zermatt, Switzerland</copyright>
     <tags>Cake Script PullRequest CodeAnalysis Cake-Prca-IssueProvider JavaScript Linting ESLint</tags>
+    <releaseNotes>https://github.com/cake-contrib/Cake.Prca.Issues.EsLint/releases/tag/0.3.0</releaseNotes>
   </metadata>
   <files>
     <file src="Cake.Prca.Issues.EsLint.dll" target="lib\net45" />
