--- a/nuspec/nuget/Cake.Prca.Issues.EsLint.nuspec
+++ b/nuspec/nuget/Cake.Prca.Issues.EsLint.nuspec
@@ -10,7 +10,7 @@
     <description>The ESLint support for the Pull Request Code Analysis Addin for Cake allows you to write any issues logged by ESLint as comments to a pull request.</description>
     <licenseUrl>https://github.com/cake-contrib/Cake.Prca.Issues.EsLint/blob/develop/LICENSE</licenseUrl>
     <projectUrl>https://github.com/cake-contrib/Cake.Prca.Issues.EsLint</projectUrl>
-    <iconUrl>https://raw.githubusercontent.com/cake-build/graphics/aba74fb4cb5fe9454381af2cc70c870088229d5c/png/cake-medium.png</iconUrl>
+    <iconUrl>https://cdn.rawgit.com/cake-contrib/graphics/a5cf0f881c390650144b2243ae551d5b9f836196/png/cake-contrib-medium.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <copyright>Copyright © 2017 BBT Software AG, Root/Zermatt, Switzerland</copyright>
     <tags>Cake Script PullRequest CodeAnalysis Cake-Prca-IssueProvider JavaScript Linting ESLint</tags>
