--- a/src/Cake.Prca.Issues.EsLint.Tests/packages.config
+++ b/src/Cake.Prca.Issues.EsLint.Tests/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Cake.Core" version="0.16.2" targetFramework="net452" />
-  <package id="Cake.Prca" version="0.5.0-beta0001" targetFramework="net452" />
+  <package id="Cake.Prca" version="0.5.0" targetFramework="net452" />
   <package id="Cake.Testing" version="0.16.2" targetFramework="net452" />
   <package id="Shouldly" version="2.8.2" targetFramework="net452" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
